--- a/product/Makefile
+++ b/product/Makefile
@@ -1,8 +1,8 @@
 # use bash as the default shell to be used in the recipe
 SHELL := /bin/bash
-.PHONY : build # to make make not be confused by the build directory
+.PHONY : gen-proto # to make make not be confused by the build directory
 
-build :
+gen-proto :
 		@echo generate the Go code from protobuf
 		$(SHELL) build/proto-gen.sh
 
